@@ -7,27 +7,28 @@ import com.goals.course.journal.dto.RoleDTO;
 import com.goals.course.journal.dto.UserDTO;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
-import io.restassured.module.mockmvc.RestAssuredMockMvc;
-import org.junit.ClassRule;
+import io.restassured.module.webtestclient.RestAssuredWebTestClient;
 import org.junit.jupiter.api.BeforeEach;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.util.TestPropertyValues;
 import org.springframework.cloud.contract.verifier.messaging.boot.AutoConfigureMessageVerifier;
+import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationContextInitializer;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.web.servlet.MockMvc;
 import org.testcontainers.containers.PostgreSQLContainer;
+import reactor.core.publisher.Mono;
 
 import java.time.Duration;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Date;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Stream;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -38,16 +39,14 @@ import static org.mockito.Mockito.when;
 @ContextConfiguration(initializers = ContractVerifierBaseTestClass.Initializer.class)
 @DirtiesContext
 @AutoConfigureMessageVerifier
-@AutoConfigureMockMvc
-public class ContractVerifierBaseTestClass {
+class ContractVerifierBaseTestClass {
 
-    @ClassRule
     public static final PostgreSQLContainer postgreSQLContainer = new PostgreSQLContainer<>("postgres:14.0")
             .withDatabaseName("course_journal")
             .withUsername("sa")
             .withPassword("sa");
     @Autowired
-    private MockMvc mockMvc;
+    private ApplicationContext applicationContext;
     @MockBean
     private FileRepository mockFileRepository;
     @Value("${app.jwt.access.secret}")
@@ -66,7 +65,7 @@ public class ContractVerifierBaseTestClass {
     @BeforeEach
     public void setup() {
         setupFile();
-        RestAssuredMockMvc.mockMvc(mockMvc);
+        RestAssuredWebTestClient.applicationContextSetup(applicationContext);
     }
 
     private void setupFile() {
@@ -74,7 +73,7 @@ public class ContractVerifierBaseTestClass {
                 .setContentType("application/pdf")
                 .setLessonId(UUID.fromString("00000000-0000-0000-0000-000000000002"))
                 .setStudentId(UUID.fromString("00000000-0000-0000-0000-000000000003"));
-        when(mockFileRepository.findById(any())).thenReturn(Optional.of(fileEntity));
+        when(mockFileRepository.findById(any(UUID.class))).thenReturn(Mono.just(fileEntity));
     }
 
     public String authToken() {
@@ -91,7 +90,7 @@ public class ContractVerifierBaseTestClass {
     private List<RoleDTO> buildRoles() {
         return Stream.of(Roles.values())
                 .map(r -> RoleDTO.builder().title(r.name()).build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public String generateAccessToken(final UserDTO userDTO) {
@@ -112,15 +111,17 @@ public class ContractVerifierBaseTestClass {
         return Map.of("userId", userDTO.getId().toString(), "roles", roles);
     }
 
-
     static class Initializer
             implements ApplicationContextInitializer<ConfigurableApplicationContext> {
         public void initialize(ConfigurableApplicationContext configurableApplicationContext) {
             postgreSQLContainer.start();
             TestPropertyValues.of(
-                    "spring.datasource.url=" + postgreSQLContainer.getJdbcUrl(),
-                    "spring.datasource.username=" + postgreSQLContainer.getUsername(),
-                    "spring.datasource.password=" + postgreSQLContainer.getPassword()
+                    "spring.r2dbc.url=" + "r2dbc:postgresql://%s:%s/%s".formatted(postgreSQLContainer.getHost(), postgreSQLContainer.getFirstMappedPort(), postgreSQLContainer.getDatabaseName()),
+                    "spring.r2dbc.username=" + postgreSQLContainer.getUsername(),
+                    "spring.r2dbc.password=" + postgreSQLContainer.getPassword(),
+                    "spring.flyway.url=jdbc:postgresql://%s:%s/%s".formatted(postgreSQLContainer.getHost(), postgreSQLContainer.getFirstMappedPort(), postgreSQLContainer.getDatabaseName()),
+                    "spring.flyway.user=${spring.r2dbc.username}",
+                    "spring.flyway.password=${spring.r2dbc.password}"
             ).applyTo(configurableApplicationContext.getEnvironment());
         }
     }
